Кнопка Добавить рейс. Очень beta (alpha) #BOT-15